--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
     "@storybook/builder-vite": "^0.2.7",
+    "@storybook/jest": "^0.0.10",
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
