--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "babel-loader": "^8.3.0",
+    "msw": "^0.49.2",
+    "msw-storybook-addon": "^1.7.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
