--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test-storybook": "test-storybook",
+    "test-storybook:ci": "concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm run build-storybook --quiet && npx http-server storybook-static --port 6066 --silent\" \"wait-on tcp:6066 && test-storybook --url http://localhost:6066\""
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -23,15 +25,19 @@
     "@storybook/builder-vite": "^0.2.7",
     "@storybook/jest": "^0.0.10",
     "@storybook/react": "^6.5.15",
+    "@storybook/test-runner": "^0.9.2",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "babel-loader": "^8.3.0",
+    "concurrently": "^7.6.0",
+    "http-server": "^14.1.1",
     "msw": "^0.49.2",
     "msw-storybook-addon": "^1.7.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "wait-on": "^7.0.1"
   },
   "msw": {
     "workerDirectory": "public"
